move public necessities to public

--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "displayName": "Cashbook express",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0"
   }
 }
